ajout cours liaison de données et directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h1>Salut, je suis le app component html</h1>
+      <h1>Je suis le app component html</h1>
       <hr>
       <!--<app-servers></app-servers>--> <!--Composant ajouté en tant que sélecteur-->
       <!--<div app-servers></div>-->  <!--Composant ajouté en tant que attribut html-->
       <div class="app-servers"></div> <!--Composant ajouté en tant que class-->
-      <app-warning-alert message="Error"></app-warning-alert>
-      <app-success-alert message="Successful"></app-success-alert>
+      <!--<app-warning-alert message="Error"></app-warning-alert>
+      <app-success-alert message="Successful"></app-success-alert>-->
     </div>
   </div>
 
