--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,4 +1,6 @@
 
-<h3>test</h3>
+<h3>Composant Server</h3>
 
-<p>Ceci est le contenu du composant server</p>
+<p [ngStyle] = "{backgroundColor: getColor()}" [ngClass]="{online: serverStatus === 'online'}">
+    {{ 'Server' }} avec Id {{ serverId }} is {{ getServerStatus() }}
+</p>
