--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,8 +7,8 @@
 
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Ajouter un serveur</button>
 <!--<p>{{ serverCreationStatus }}</p>-->
-<p *ngIf="serverCreated; else noServer">Le serveur a été créé, le nom du serveur est : {{ serverName }}</p><!--*ngIf est un condition en attribut-->
-<ng-template #noServer><p>Aucun serveur de créé</p></ng-template><!--*ngIf est un condition en attribut-->
-<app-server *ngFor="let server of servers"></app-server>
+<p *ngIf="serverCreated; else noServer">Le serveur a été créé, le nom du serveur est : {{ serverName }}</p><!--*ngIf est une condition en attribut-->
+<ng-template #noServer><p>Aucun serveur de créé</p></ng-template><!--*ngIf est une condition en attribut-->
+<app-server *ngFor="let server of servers"></app-server> <!-- Boucle *ngFor à chaque clique du btn pour ajouter des composant app-server-->
 
 <app-exercices></app-exercices>
