--- a/src/app/exercices/exercices.component.html
+++ b/src/app/exercices/exercices.component.html
@@ -1,13 +1,30 @@
 <hr>
+
 <h2>Exercice : Liaisons de données</h2>
+
 <label for="">Nom utilisateur</label>
+
 <input type="text" class="form-control" [(ngModel)]="userName">
+
 <p>{{ userName }}</p>
+
 <button class="btn btn-primary" [disabled]="userName === ''" (click)="deleteUserName()">Effacer</button>
 
+
 <hr>
+
 <h2>Exercice : Les directives</h2>
+
 <button class="btn btn-primary" (click)="displaySecretContent()">Afficher les détails</button>
-<p *ngIf="secretContent; else noSecret" [ngClass]="{supCinq: logClickNumber > 4}" [ngStyle]="{backgroundColor:bgColor()}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus lorem ex, at consequat metus dictum vitae. Suspendisse tempus varius interdum. Integer ac risus porttitor nulla laoreet posuere quis vitae tellus. Integer efficitur pellentesque ex, id vestibulum metus dapibus eu. Suspendisse aliquam a leo semper hendrerit. </p>
+
+<p *ngIf="secretContent; else noSecret">Secret password = tuna</p>
+
 <ng-template #noSecret><p></p></ng-template>
-<p>{{ logClickNumber }} </p>
+
+<p 
+*ngFor="let log of logClickNumber"
+[ngClass]="{'supCinq': log >= 5}"
+[ngStyle]="{backgroundColor: log >= 5 ? 'blue' : 'transparent'}">
+    {{ log }} 
+</p><!--Ici logClickNumber est un tableau, chaque element du tableau est un log-->
+<!-- exemple plus concret : let book of booklist -->
