--- a/src/app/servers/servers.component.css
+++ b/src/app/servers/servers.component.css
@@ -1,5 +1,14 @@
 h2{
     text-align: center;
     padding:20px;
-    
+}
+
+.servers{
+    padding:15px;
+    border-radius:5px;
+    border:1px solid rgb(54, 121, 57);
+}
+
+.servers strong{
+    color:rgb(54, 121, 57) ;
 }
